# narrate-ai

./: .gitignore  README.md  api.py  app.py  main.py  pipeline.py  pyproject.toml  requirements.txt  sample.py
core/: analysis.py  cleaning.py  modeling.py  storytelling.py  tasks.py
