[project]
name = "narrate-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "argcomplete==3.6.2",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==6.2.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "distro==1.9.0",
    "fastapi==0.116.1",
    "filelock==3.13.1",
    "fonttools==4.59.2",
    "fsspec==2024.6.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "jinja2==3.1.4",
    "jiter==0.10.0",
    "joblib==1.5.2",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.9",
    "markupsafe==2.1.5",
    "matplotlib==3.10.6",
    "mpmath==1.3.0",
    "narwhals==2.3.0",
    "networkx==3.3",
    "numpy==2.1.2",
    "openai==1.106.1",
    "packaging==25.0",
    "pandas==2.3.2",
    "patsy==1.0.1",
    "pillow==11.0.0",
    "pipx==1.7.1",
    "platformdirs==4.4.0",
    "plotly==6.3.0",
    "protobuf==6.32.0",
    "pyarrow==21.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "safetensors==0.6.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.47.3",
    "statsmodels==0.14.5",
    "streamlit==1.49.1",
    "sympy==1.13.3",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.0",
    "toml==0.10.2",
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "transformers==4.56.1",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "userpath==1.9.2",
    "uvicorn==0.35.0",
    "watchdog==6.0.0",
    "wheel==0.45.1",
    "xgboost==3.0.5",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
default = true
